add paginator component

--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -4,3 +4,7 @@
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
+<app-paginator
+  *ngIf="pagination"
+  [load]="load">
+</app-paginator>
