--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -3,6 +3,7 @@
 <ag-grid-angular
     style="height: 315px;"
     class="ag-theme-balham"
+    (cellClicked)="openDeletePrompt($event)"
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
