--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -1,4 +1,6 @@
-<app-table-toolbar></app-table-toolbar>
+<app-table-toolbar
+(downloadClicked)="downloadConfig.handler()">
+</app-table-toolbar>
 <br><br>
 <ag-grid-angular
     style="height: 315px;"
