change event handler name for clarity

--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -5,7 +5,7 @@
 <ag-grid-angular
     style="height: 315px;"
     class="ag-theme-balham"
-    (cellClicked)="openDeletePrompt($event)"
+    (cellClicked)="openModal($event)"
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
