add html to shared delete

--- a/src/app/pages/shared-crud/delete/delete.component.html
+++ b/src/app/pages/shared-crud/delete/delete.component.html
@@ -1,1 +1,10 @@
-<p>delete works!</p>
+<ng-container cdkDrag cdkDragRootElement=".cdk-overlay-pane" >
+  <div class="row">
+    <h2 mat-dialog-title>Delete</h2>
+    <mat-dialog-content>Are you sure you want to delete the ?</mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button [mat-dialog-close]="true">Delete</button>
+    </mat-dialog-actions>
+  </div>
+</ng-container>
