--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -1,11 +1,11 @@
-<app-table-toolbar
+<app-toolbar
 (downloadClicked)="downloadConfig.handler()">
-</app-table-toolbar>
+</app-toolbar>
 <br><br>
 <ag-grid-angular
     style="height: 315px;"
     class="ag-theme-balham"
-    (cellClicked)="openIndividualModal($event)"
+    (cellClicked)="openModal($event)"
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
@@ -16,6 +16,6 @@
 </app-paginator>
 <button
   style="float: right"
-  (click)="openSharedForm()">
+  (click)="openForm()">
   {{createConfig.label}}
 </button>
