added some styling

--- a/src/app/pages/paginator/paginator.component.html
+++ b/src/app/pages/paginator/paginator.component.html
@@ -1,5 +1,1 @@
-<button
-  (click)="previousPage()"
->Previous</button><button
-  (click)="nextPage()"
->Next</button>
+<button (click)="previousPage()" mat-raised-button class="mat-primary">Previous</button><button mat-raised-button class="mat-primary" (click)="nextPage()">Next</button>
