--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<p>Home Page</p>
+<h2>Reference Tables</h2>
 <nav>
   <ul>
     <li><a routerLink="/omb-object-codes" routerLinkActive="active">OMB Object Codes</a></li>
