--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-balham.css';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
