added sort button

--- a/src/app/pages/table/components/toolbar/toolbar.component.html
+++ b/src/app/pages/table/components/toolbar/toolbar.component.html
@@ -1,5 +1,8 @@
 <button mat-raised-button class="mat-primary" (click)="openFilterModal()">Filter</button>
 
+<button mat-raised-button class="mat-primary" (click)="openSortModal()">Sort</button>
+
+
 <button mat-raised-button class="mat-primary" (click)="downloadClicked.emit()">
   Export to Excel
 </button>
