--- a/src/app/pages/table/components/toolbar/filter/filter.component.html
+++ b/src/app/pages/table/components/toolbar/filter/filter.component.html
@@ -1,2 +1,11 @@
 <h2 mat-dialog-title>Filter</h2>
-<mat-dialog-content></mat-dialog-content>
+<mat-dialog-content>
+    <mat-form-field appearance="fill">
+        <mat-label>Field</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let columnDef of columnDefs" [value]="columnDef.field">
+            {{columnDef.headerName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+</mat-dialog-content>
