--- a/src/app/pages/table/components/toolbar/filter/filter.component.html
+++ b/src/app/pages/table/components/toolbar/filter/filter.component.html
@@ -2,10 +2,11 @@
 <mat-dialog-content>
     <mat-form-field appearance="fill">
         <mat-label>Field</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let columnDef of columnDefs" [value]="columnDef.field">
-            {{columnDef.headerName}}
-          </mat-option>
+        <mat-select [value]="'-'">
+            <mat-option value="-">None</mat-option>
+            <mat-option *ngFor="let columnDef of columnDefs" [value]="columnDef.field">
+                {{columnDef.headerName}}
+            </mat-option>
         </mat-select>
-      </mat-form-field>
+    </mat-form-field>
 </mat-dialog-content>
