wired-up filter component to columnDefs

--- a/src/app/pages/table/components/toolbar/filter/filter.component.html
+++ b/src/app/pages/table/components/toolbar/filter/filter.component.html
@@ -9,6 +9,13 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
+
+    <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Value</mat-label>
+            <input matInput />
+        </mat-form-field>
+    </div>
     <mat-dialog-actions>
         <button mat-button [mat-dialog-close]="">Cancel</button>
         <button mat-button [mat-dialog-close]="filter">Save</button>
