--- a/src/app/pages/table/components/toolbar/toolbar.component.html
+++ b/src/app/pages/table/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button class="mat-primary" (click)="openFilterModal()">Filter</button>
+<button *ngIf="filterEnabled" mat-raised-button class="mat-primary" (click)="openFilterModal()">Filter</button>
 
 <button mat-raised-button class="mat-primary" (click)="downloadClicked.emit()">
   Export to Excel
